<resources>
    <string name="app_name">Test App</string>

    <string name="splash">Splash</string>
    <string name="auth">Auth</string>

    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="password">Password</string>

    <string name="wrong_auth_data">Wrong login or password</string>
    <string name="uncorrect_type">uncorrect type</string>
    <string name="forget_password">forget password?</string>

    <string name="payments">payments</string>
    <string name="id">id</string>
    <string name="title">title</string>
    <string name="amount">amount</string>
    <string name="created">created</string>

    <string name="user_home">User home</string>
    <string name="logout">Logout</string>
</resources>