<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splash_nav"
    android:id="@+id/starting_navigations">

    <fragment
        android:id="@+id/splash_nav"
        android:name="test.task.app.splash.Splash"
        android:label="@string/splash"
        tools:layout="@layout/splash">

        <action
            android:id="@+id/splash_to_auth"
            app:destination="@id/auth_nav"
            app:popUpTo="@id/splash_nav"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/login_to_user_home"
            app:destination="@+id/user_home_nav"
            app:popUpTo="@id/user_home_nav"/>

    </fragment>

    <fragment
        android:id="@+id/auth_nav"
        android:name="test.task.app.authorization.AuthFragment"
        android:label="@string/auth"
        tools:layout="@layout/auth">

        <action
            android:id="@+id/auth_to_login"
            app:destination="@id/login_nav"
            app:popUpTo="@id/auth_nav"/>

    </fragment>

    <fragment
        android:id="@+id/login_nav"
        android:name="test.task.app.authorization.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login">

        <action
            android:id="@+id/login_to_splash"
            app:destination="@id/splash_nav"
            app:popUpTo="@id/splash_nav"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/user_home_nav"
        android:name="test.task.app.userhome.UserHome"
        android:label="@string/user_home"
        tools:layout="@layout/user_home">

        <action
            android:id="@+id/user_home_to_splash"
            app:destination="@id/splash_nav"
            app:popUpTo="@id/splash_nav"/>
    </fragment>

</navigation>