<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/login"
        app:titleCentered="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/wrong_auth_dataTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_auth_data"
            android:textAlignment="textStart"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:background="@drawable/border_radius">

            <EditText
                android:id="@+id/loginET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:ems="10"
                android:inputType="text"
                android:maxLength="64"
                android:minHeight="48dp"
                android:singleLine="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/passwordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/password"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:background="@drawable/border_radius">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:ems="10"
                android:inputType="text|textPassword"
                android:maxLength="64"
                android:minHeight="48dp"
                android:singleLine="true"
                tools:ignore="Autofill" />

        </FrameLayout>

        <TextView
            android:id="@+id/forgetPassTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/sky_blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        style="@style/MyBtnStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="74dp"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>